--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "browser-sync start --server \"www\" --files \"www/index.html\"",
     "docker:build": "docker build -t equinor/oss-web .",
     "docker:start": "docker run -p 8080:8080 equinor/oss-web",
-    "docker:inspect": "docker run -it equinor/oss-web /bin/sh"
+    "docker:inspect": "docker run -it equinor/oss-web /bin/sh",
+    "preinstall": "npx only-allow pnpm"
   },
   "devDependencies": {
     "browser-sync": "^3.0.3",
