--- a/package.json
+++ b/package.json
@@ -13,12 +13,13 @@
     "update-tokens:colors": "sync-figma-to-tokens --file-key QRFchmc6GHsKSBEdqdFLMr",
     "update-tokens:spacing": "sync-figma-to-tokens --file-key V3XAAjEw7dl2vQmDvG4RNW",
     "update-tokens:typography": "sync-figma-to-tokens --file-key FS9KIlmO8N8rv3rAO65UUi",
+    "update-tokens": "pnpm run update-tokens:colors:brand && pnpm run update-tokens:colors && pnpm run update-tokens:spacing && pnpm run update-tokens:typography",
     "_pre-generate:clean": "rimraf ./build && rimraf ./src/variables",
     "_pre-generate:build": "vite build --config vite.generate.config.ts",
-    "_pre-generate:copy": "copyfiles ./src/generate/css/*.css ./src/variables --flat && copyfiles ./build/css/*.css ./src/variables --flat",
-    "_pre-generate:copy-build": "copyfiles -u 2 \"./build/css/**/*\" ./src/variables",
-    "update-tokens": "pnpm run update-tokens:colors:brand && pnpm run update-tokens:colors && pnpm run update-tokens:spacing && pnpm run update-tokens:typography",
-    "generate": "pnpm run _pre-generate:clean && pnpm run _pre-generate:build && node build-generate/generate.js && pnpm run _pre-generate:copy && pnpm run _pre-generate:copy-build && lightningcss --bundle ./src/variables/_index.css -o ./src/variables/index.css"
+    "_pre-generate:copy-css-index": "copyfiles ./src/generate/css/*.css ./src/variables --flat",
+    "_pre-generate:copy-build-output": "copyfiles -u 2 \"./build/css/**/*\" ./src/variables",
+    "_css:generate": "lightningcss --bundle ./src/variables/_index.css -o ./src/variables/index.css",
+    "generate": "pnpm run _pre-generate:clean && pnpm run _pre-generate:build && node build-generate/generate.js && pnpm run _pre-generate:copy-css-index && pnpm run _pre-generate:copy-build-output && pnpm run _css:generate"
   },
   "devDependencies": {
     "@equinor/eds-tokens-build": "^1.0.0",
